# engagedin

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.opencode/: opencode.json
.opencode/agents/: code-review.md  test.md
.opencode/skills/engagedin-context/: SKILL.md
.opencode/skills/ruff-style/: SKILL.md
.opencode/skills/testing-conventions/: SKILL.md
engagedin/: __main__.py
engagedin/cli/: main.py
engagedin/core/: config.py  engine.py  models.py
engagedin/linkedin/: auth.py  client.py
engagedin/llm/: client.py  prompts.py
engagedin/news/: client.py  models.py
engagedin/rules/: defaults.yaml  loader.py
tests/: test_auth.py  test_cli.py  test_engine.py  test_linkedin.py  test_llm.py  test_main.py  test_models.py  test_news.py  test_rules.py
