[project]
name = "engagedin"
version = "0.1.0"
description = "AI-powered LinkedIn content generator"
readme = "README.md"
license = "MIT"
authors = [{ name = "Matheus" }]
requires-python = ">=3.12"

dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "litellm>=1.0",
    "pyyaml>=6.0",
    "authlib>=1.3",
    "keyring>=25.0",
]

[project.scripts]
engagedin = "engagedin.cli.main:cli"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["engagedin*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "ruff (>=0.15.16,<0.16.0)",
    "pytest-cov (>=7.1.0,<8.0.0)"
]
